indexing in database

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -5,15 +5,13 @@ categories: [database]
 tags: [database]
 ---
 
-# How do indexes make databases read faster?
-
 First lets understand how data is stored on disk.
 
 # Data Blocks
 
 The actual contents of files are stored in data blocks scattered across the disk. When a file is saved, the file system allocates a series of contiguous or non-contiguous blocks to store its data. These blocks may not be physically adjacent on the disk but are logically linked together through pointers in the file's metadata.
 
-![alt text](datablock.gif)
+![alt text](../../assets/database/datablock.gif)
 
 # Indexing
 
@@ -23,7 +21,7 @@ In database management systems (DBMS), indexing is a technique used to improve t
 
 An index typically consists of two parts: the index key and the pointer to the corresponding data. The index key is the column or columns on which the index is built, and the pointer is a reference to the actual row in the table. Indexes can be built on single columns or on multiple columns (composite indexes).
 
-![alt text](Index-ds.png)
+![alt text](../../assets/database/Index-ds.png)
 
 # Types of Indexes :-
 
@@ -32,7 +30,7 @@ A Primary Index is an ordered file whose records are of fixed length with two fi
 
 [For more in depth](https://www.geeksforgeeks.org/primary-indexing-in-databases/)
 
-![alt text](image-1.png)
+![alt text](../../assets/database/Primmary-Index.jpeg)
 
 ### Types of Primary Indexing
 
@@ -57,12 +55,12 @@ A clustered index is an index that describes the physical configuration of the t
 
 [For more in depth](https://www.boardinfinity.com/blog/clustered-and-non-clustered-index/)
 
-![alt text](clustered-index.png)
+![alt text](../../assets/database/clustered-index.png)
 
 # Non-Clustered Index
 The physical arrangement of the records kept in the database table is not specified by a non-clustered index. A separate table houses the Non-Clustered Indexes. There may be many non-clustered indexes created for a single table as a result of the fact that they are maintained in a different table.
 
-![alt text](non-cluster-index.png)
+![alt text](../../assets/database/non-cluster-index.png)
 
 
 # Creating Indexes
