indexing file added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -4,21 +4,12 @@ date: 2024-03-23 12:36:00 +0800
 categories: [database]
 tags: [database]
 ---
-# Redshift
-- Amazon Redshift is an enterprise-level, petabyte scale, fully managed data
-  warehousing service.
+First lets understand how data is stored on disk.
 
-- Amazon Redshift delivers 10 times faster performance than other data
-  warehouses.
+# Data Blocks
 
-- It does so by using sophisticated query optimization, columnar storage on
-  high-performance local disks, machine learning, and massively parallel
-  query execution.
+The actual contents of files are stored in data blocks scattered across the disk. When a file is saved, the file system allocates a series of contiguous or non-contiguous blocks to store its data. These blocks may not be physically adjacent on the disk but are logically linked together through pointers in the file's metadata.
 
-- Amazon Redshift supports client connections with many types of
-  applications, including business intelligence (BI), reporting, data, and
-  analytics tools.
+![alt text](../assets/database/datablock.gif)
 
-# Data Warehouse System Architecture
-![alt text](../assets/aws/redshift.png)
-- Explaination https://docs.aws.amazon.com/redshift/latest/dg/c_high_level_system_architecture.html
+# Indexing
