indexing file added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -13,3 +13,11 @@ The actual contents of files are stored in data blocks scattered across the disk
 ![alt text](../assets/database/datablock.gif)
 
 # Indexing
+
+In database management systems (DBMS), indexing is a technique used to improve the speed of data retrieval operations on tables or views. It involves creating data structures known as indexes, which store pointers or references to rows in a table sorted based on the values of one or more columns. Here's how indexing works in DBMS.
+
+# Index Structure
+
+An index typically consists of two parts: the index key and the pointer to the corresponding data. The index key is the column or columns on which the index is built, and the pointer is a reference to the actual row in the table. Indexes can be built on single columns or on multiple columns (composite indexes).
+
+![alt text](../../assets/database/index-ds.png)
