indexing file added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -20,4 +20,4 @@ In database management systems (DBMS), indexing is a technique used to improve t
 
 An index typically consists of two parts: the index key and the pointer to the corresponding data. The index key is the column or columns on which the index is built, and the pointer is a reference to the actual row in the table. Indexes can be built on single columns or on multiple columns (composite indexes).
 
-![alt text](../assets/database/index-ds.png)
+![alt text](../assets/database/index.png)
