primary indexing added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -32,3 +32,17 @@ A Primary Index is an ordered file whose records are of fixed length with two fi
 [For more in depth](https://www.geeksforgeeks.org/primary-indexing-in-databases/)
 
 ![alt text](../assets/database/primmaryindex.jpeg)
+
+### Types of Primary Indexing
+
+- Dense Indexing: In Dense Index has an index entry for every search key value in the data file. This approach ensures efficient data retrieval but requires more storage space.
+
+```
+No of Index Entry = No of DB Record
+```
+
+- Sparse Indexing: Sparse indexing involves having fewer index entries than records. The index entries point to blocks of records rather than individual records. While it reduces storage overhead, it may require additional disk accesses during retrieval.
+
+```
+No of Index Entry is not equal to No of Block
+```
