primary indexing added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -31,7 +31,7 @@ A Primary Index is an ordered file whose records are of fixed length with two fi
 
 [For more in depth](https://www.geeksforgeeks.org/primary-indexing-in-databases/)
 
-![alt text](../assets/database/primmaryindex.jpeg)
+![alt text](../assets/database/index.png)
 
 ### Types of Primary Indexing
 
