primary indexing added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -61,7 +61,7 @@ A clustered index is an index that describes the physical configuration of the t
 
 The physical arrangement of the records kept in the database table is not specified by a non-clustered index. A separate table houses the Non-Clustered Indexes. There may be many non-clustered indexes created for a single table as a result of the fact that they are maintained in a different table.
 
-![alt text](../assets/database/nonClusterIndex.png)
+![alt text](../assets/database/index2.png)
 
 # Creating Indexes
 
