primary indexing added

--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -31,6 +31,8 @@ A Primary Index is an ordered file whose records are of fixed length with two fi
 
 [For more in depth](https://www.geeksforgeeks.org/primary-indexing-in-databases/)
 
+![alt text](../assets/database/primmaryindex.jpeg)
+
 ### Types of Primary Indexing
 
 - Dense Indexing: In Dense Index has an index entry for every search key value in the data file. This approach ensures efficient data retrieval but requires more storage space.
@@ -56,6 +58,8 @@ Secondary indexing is a database management technique used to create additional 
 A clustered index is an index that describes the physical configuration of the table records in a database. Since there is only one-way records can be kept physically in a database table, each table can only have one clustered index. It keeps the data in sorted order
 
 [For more in depth](https://www.boardinfinity.com/blog/clustered-and-non-clustered-index/)
+
+![alt text](../assets/database/clusteredIndex.png)
 
 # Non-Clustered Index
 
