--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -47,13 +47,13 @@ No of Index Entry = No of DB Record
 No of Index Entry is not equal to No of Block
 ```
 
-# Secondary Indexing
+## Secondary Indexing
 
 Secondary indexing is a database management technique used to create additional indexes on data stored in a database. The main purpose of secondary indexing is to improve the performance of queries and to simplify the search for specific records within a database. A secondary index provides an alternate means of accessing data in a database, in addition to the primary index. The primary index is typically created when the database is created and is used as the primary means of accessing data in the database. Secondary indexes, on the other hand, can be created and dropped at any time, allowing for greater flexibility in managing the database.
 
 [For more in depth](https://www.geeksforgeeks.org/secondary-indexing-in-databases/)
 
-# Clustered Index
+## Clustered Index
 
 A clustered index is an index that describes the physical configuration of the table records in a database. Since there is only one-way records can be kept physically in a database table, each table can only have one clustered index. It keeps the data in sorted order
 
@@ -61,7 +61,7 @@ A clustered index is an index that describes the physical configuration of the t
 
 ![alt text](../assets/database/clusteredIndex.png)
 
-# Non-Clustered Index
+## Non-Clustered Index
 
 The physical arrangement of the records kept in the database table is not specified by a non-clustered index. A separate table houses the Non-Clustered Indexes. There may be many non-clustered indexes created for a single table as a result of the fact that they are maintained in a different table.
 
