permutation of given string problem

--- a/_posts/aws/2024-03-23-redshift.md
+++ b/_posts/aws/2024-03-23-redshift.md
@@ -21,4 +21,5 @@ tags: [aws]
 
 # Data Warehouse System Architecture
 ![alt text](../assets/aws/redshift.png)
-- Explaination https://docs.aws.amazon.com/redshift/latest/dg/c_high_level_system_architecture.html
+
+[Explaination](https://docs.aws.amazon.com/redshift/latest/dg/c_high_level_system_architecture.html)
