--- a/_posts/database/2024-03-23-indexing.md
+++ b/_posts/database/2024-03-23-indexing.md
@@ -78,3 +78,5 @@ When processing a query, the DBMS's query optimizer decides whether and how to u
 # Trade-offs
 
 While indexes can significantly improve query performance, they also come with trade-offs, including increased storage requirements, overhead in write operations, and potential for index fragmentation.
+
+[Refrence Link](https://youtu.be/Fr-0rNhIECw)
